<?xml version="1.0"?>
<package>
  <name>pal_texture_detector</name>
  <version>0.1.0</version>
  <description>Planar textured object detector based on keypoints and descriptors and homography estimation (if pose is required)</description>

  <maintainer email="jordi.pages@pal-robotics.com">Jordi Pages</maintainer>
  <author email="jordi.pages@pal-robotics.com">Jordi Pages</author>
  <license>Modified BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>pal_detection_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>bullet</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>pal_detection_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
</package>
